[gd_scene load_steps=3 format=3 uid="uid://dn8h558vk1uos"]

[ext_resource type="Script" path="res://Scripts/csv_opener.gd" id="1_lneui"]
[ext_resource type="Script" path="res://Scripts/habilities_improvement.gd" id="1_yy4rk"]

[node name="HabilitesImprovement" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yy4rk")

[node name="CSV_OPENER" type="Node" parent="."]
script = ExtResource("1_lneui")

[node name="StartButtons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PautasButtons" type="Control" parent="StartButtons"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EmpregoButton" type="Button" parent="StartButtons/PautasButtons"]
layout_mode = 0
offset_left = 662.0
offset_top = 1.0
offset_right = 702.0
offset_bottom = 41.0

[node name="MeioAmbienteButton" type="Button" parent="StartButtons/PautasButtons"]
layout_mode = 0
offset_left = 596.0
offset_top = 29.0
offset_right = 636.0
offset_bottom = 69.0

[node name="AnimalsButton" type="Button" parent="StartButtons/PautasButtons"]
layout_mode = 0
offset_left = 727.0
offset_top = 27.0
offset_right = 767.0
offset_bottom = 67.0

[node name="TechnologyButton" type="Button" parent="StartButtons/PautasButtons"]
layout_mode = 0
offset_left = 543.0
offset_top = 76.0
offset_right = 583.0
offset_bottom = 116.0

[node name="ImigrantsButton" type="Button" parent="StartButtons/PautasButtons"]
layout_mode = 0
offset_left = 783.0
offset_top = 72.0
offset_right = 823.0
offset_bottom = 112.0

[node name="TaxesButton" type="Button" parent="StartButtons/PautasButtons"]
layout_mode = 0
offset_left = 543.0
offset_top = 133.0
offset_right = 583.0
offset_bottom = 173.0

[node name="ArmyButton" type="Button" parent="StartButtons/PautasButtons"]
layout_mode = 0
offset_left = 784.0
offset_top = 131.0
offset_right = 824.0
offset_bottom = 171.0

[node name="SecurityButton" type="Button" parent="StartButtons/PautasButtons"]
layout_mode = 0
offset_left = 596.0
offset_top = 183.0
offset_right = 636.0
offset_bottom = 223.0

[node name="HealthButton" type="Button" parent="StartButtons/PautasButtons"]
layout_mode = 0
offset_left = 731.0
offset_top = 184.0
offset_right = 771.0
offset_bottom = 224.0

[node name="EducationButton" type="Button" parent="StartButtons/PautasButtons"]
layout_mode = 0
offset_left = 663.0
offset_top = 212.0
offset_right = 703.0
offset_bottom = 252.0
